--- a/wp-content/themes/depardo/sass/components/_hero.scss
+++ b/wp-content/themes/depardo/sass/components/_hero.scss
@@ -33,6 +33,10 @@
 
   &__title {
     font-size: 3rem;
+
+    @include mq(ipad, 'max-width') {
+      font-size: 2.25rem;
+    }
   }
 
   &__copy {
@@ -41,15 +45,30 @@
     width: 100%;
     max-width: 30rem;
     line-height: 1.6;
+
+    @include mq(ipad, 'max-width') {
+      font-size: 1.15rem;
+      line-height: 1.45;
+    }
   }
 
   &--video {
     padding: 0 !important;
     position: relative;
 
+    @include mq(ipad, 'max-width') {
+      background-size: cover;
+      background-image: url('../img/banners/video-screenshot.jpg');
+      padding: 8rem 0 15rem !important;
+    }
+
     video {
       min-width: 100%;
       max-width: 100%;
+
+      @include mq(ipad, 'max-width') {
+        display: none;
+      } 
     }
 
     &::after {
@@ -71,6 +90,10 @@
       top: 40%;
       left: 0;
       right: 0;
+
+      @include mq(ipad, 'max-width') {
+        top: 35%;
+      }
     }
   }
 }
